--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,17 @@ Lab3/lab3/target/
 Lab3/lab3/.idea/
 Lab4/lab4/target/
 Lab4/lab4/.idea/
+Lab5/lab5/target/
+Lab5/lab5/.idea/
+Lab6/lab6/target/
+Lab6/lab6/.idea/
+Lab7/lab7/target/
+Lab7/lab7/.idea/
+Lab8/lab8/target/
+Lab8/lab8/.idea/
+Lab9/lab9/target/
+Lab9/lab9/.idea/
+Lab10/lab10/.idea/
+Lab10/lab10/build
+Lab10/lab10/.gradle/
+Lab10/lab10/gradle/
